# Anduril_2024_06

./: .gitignore  Cargo.toml
code/async/selector/: Cargo.toml
code/async/thread_sleep/: Cargo.toml
code/async/too_much_work/: Cargo.toml
code/async/too_much_work_spawn_blocking/: Cargo.toml
code/async/too_much_work_yield/: Cargo.toml
code/channel_workshop/summer/: Cargo.toml
code/enum_channel/crossbeam_select/: Cargo.toml
code/enum_channel/oneshot_demo/: Cargo.toml
code/ffi1/c_to_rust/: Cargo.toml  build.rs
code/ffi1/c_to_rust_bindgen/: Cargo.toml
code/ffi1/c_to_rust_callback/: Cargo.toml
code/ffi1/c_to_rust_string/: Cargo.toml
code/ffi1/c_to_rust_struct/: Cargo.toml  build.rs
code/ffi1/rust_to_c/: Cargo.toml
code/ffi2/simple_callback/: Cargo.toml  build.rs
code/ffi2/simple_class/: Cargo.toml  build.rs
code/optimization/all_cpus/: Cargo.toml
code/optimization/chunked/: Cargo.toml
code/optimization/interleaved/: Cargo.toml
code/optimization/interleaved_move/: Cargo.toml
code/optimization/measure_threads/: Cargo.toml
code/optimization/with_rayon/: Cargo.toml
code/procmacros/deriver/: Cargo.toml
code/procmacros/deriver-macros/: Cargo.toml
code/rayon/joiner/: Cargo.toml
code/rayon/scopes/: Cargo.toml
code/rayon/sorter/: Cargo.toml
code/spinlock/: Cargo.toml
code/webserver_workshop/axum_db_cache/: .env  Cargo.toml  my_database.db
code/webserver_workshop/axum_db_cache/migrations/: 20240529173000_initial.sql
code/webserver_workshop/axum_db_cache/src/: hello.html  main.rs
cpp/atomic_thread/: atomic.cpp
cpp/break_thread/: race.cpp
cpp/mutex_spot/: mutex_spot.cpp
cpp/ref_oops/: ref_oops.cpp
cpp/spot_diff/: a.cpp  b.cpp
manual/: book.toml
manual/src/: SUMMARY.md  break_cpp_thread_race.md  ff  intro.md  other_options.md  qa.md  th  thank_you.md  thu_break1.md  thu_intro.md  thu_lunch.md  thu_start.md  tue_break2.md  tue_intro.md  tue_lunch.md  tue_qa.md  wed_break1.md  wed_break2.md  wed_intro.md  wed_lunch.md  wed_qa.md  wed_start.md  who_am_i.md
manual/src/ffi1/: repr.md  (+8 more)
(+184 files in other folders)
