[package]
name = "axum_db_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.37.0", features = ["full"] }
